--- a/frontend/base/base.css
+++ b/frontend/base/base.css
@@ -54,7 +54,6 @@ header a:hover {
     border-bottom: 2px solid #003E53;
 }
 
-
 header .signup-btn {
     background-color: #00BBF9;
     border: none;
@@ -120,6 +119,7 @@ header input:focus {
 
 .desktop_nav a{
     display: none;
+    border-bottom: 2px solid transparent;
 }
 
 .desktop_nav > .btn-link:hover {
@@ -309,8 +309,8 @@ footer a:hover {
     .desktop_nav input {
         cursor: auto;
         padding: 0 1.5rem;
-        width: 100%;
-        height: 100%;
+        width: 100%;                
+        height: 1.875rem;
     }
 
     .base_main {
@@ -368,19 +368,16 @@ footer a:hover {
         padding: 3.5rem 6.5rem;
     }
 
-    footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    footer {        
         margin: 0 -6.5rem;
-        padding: 1.5rem 6.5rem;
-        text-align: left;
-    }
-
-    footer {
+        padding: 1.5rem 6.5rem;        
         flex-direction: row;
         align-items: flex-start;
         justify-content: space-between;
+    }
+
+    footer .company-logo {
+        margin: 0;
     }
 
     .footer_nav {
