--- a/frontend/login/login.css
+++ b/frontend/login/login.css
@@ -7,10 +7,171 @@ body {
   justify-content: space-evenly;
   padding: 3em;
 }
-.lp-header {
-  background-color: #fff;
-  padding: 1.2rem;
+/* ###---HEADER START---### */
+
+header {
+    align-items: center;
+    background-color: #fff;
+    border-bottom: 1px solid gray;
+    padding: 1.25rem;
 }
+
+header,
+.desktop_nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header .company-logo {
+    font-size: 1.25rem;
+    letter-spacing: .05rem;    
+    text-align: left;
+}
+
+header a,
+header button {
+    border: none;
+    /* background-color: #557E8C; */
+    color: black;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;  
+    font-weight: 600;  
+
+    height: 2rem;
+    padding: 0 1rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+header a:hover {
+    border-radius: 0;
+    border-bottom: 2px solid #003E53;
+}
+
+header .signup-btn {
+    background-color: #00BBF9;
+    border: none;
+    color: white;    
+}
+
+header button:hover {
+    background-color: #003E53;
+}
+
+header input {
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: auto;
+    padding: .2rem 1.5rem;
+    width: 30vw;
+    margin: auto;
+}
+
+header input:focus {
+    outline: none;
+}
+
+.desktop_nav .search-bar {
+    display: flex;
+    align-items: center;                
+    position: relative;
+    height: 2rem;
+    margin: 0 .25rem;   
+    visibility: hidden; 
+}
+
+.search-icon {
+    cursor: auto;
+    color: #4F4F4F;
+    font-size: .8rem;
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+    left: .5rem;    
+}
+
+::placeholder {
+    color: #4F4F4F;
+}
+
+.company-logo {
+    color: #00BBF9;    
+    font-size: 1.75rem;
+    font-weight: 600;
+    letter-spacing: .2rem;
+}
+
+.company-logo > a {
+    color: unset;
+    padding: 0;
+    text-decoration: none;
+}
+
+.company-logo > a:hover {
+    border-bottom: none;
+    text-decoration: none;
+}
+
+.desktop_nav a{
+    display: none;
+    border-bottom: 2px solid transparent;
+}
+
+.desktop_nav > .btn-link:hover {
+    border-bottom: none;
+}
+
+.mobile_nav {
+    display: flex;
+}
+
+.nav_card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: #003E53;
+    border-radius: 10px;
+    height: 60vh;
+    padding: 2rem 1.5rem;
+    width: 80vw;
+
+    position: absolute;
+    top: 4.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: .7s ease-out;
+    z-index: 3;
+}
+
+.nav_card a,
+.nav_card button {
+    background-color: transparent;
+    color: white;
+}
+
+.nav_card.hide {
+    left: -100vw;
+}
+
+header .menu_btn {
+    display: none;
+}
+
+.menu_btn {
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+
+.menu_btn:hover {
+    color: #003E53;
+}
+
+/* ###---HEADER END---### */
 
 
 .lp-login-illustration {
