--- a/frontend/team/team.css
+++ b/frontend/team/team.css
@@ -10,165 +10,163 @@
   text-align: center;
 }
 
+
 /* ###---HEADER START---### */
 
 header {
-  align-items: center;
-  border-bottom: 1px solid var(--primary-color);
-  /* box-shadow: 0px 7px 4px -4px rgba(0,0,0,0.1); */
-  border-radius: 0px 0px var(--input-border-radius) var(--input-border-radius);
-  padding: 1.25rem 0;
-  z-index: 2;
-  /* position: sticky;
-  top: 0.0rem; */
-  background-color: #fff;
+    align-items: center;
+    border-bottom: 1px solid gray;
+    padding: 1.25rem 0;
 }
 
 header,
 .desktop_nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 header .company-logo {
-  font-size: 1.25rem;
-  letter-spacing: 0.05rem;
-  text-align: left;
+    font-size: 1.25rem;
+    letter-spacing: .05rem;    
+    text-align: left;
 }
 
 header a,
 header button {
-  border: none;
-  /* background-color: #557E8C; */
-  color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-  font-weight: 600;
+    border: none;
+    /* background-color: #557E8C; */
+    color: black;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;  
+    font-weight: 600;  
 
-  height: 2rem;
-  width: unset;
-  padding: 0 1rem;
-  text-align: center;
-  text-decoration: none;
+    height: 2rem;
+    padding: 0 1rem;
+    text-align: center;
+    text-decoration: none;
 }
 
 header a:hover {
-  border-radius: 0;
-  border-bottom: 2px solid #003e53;
+    border-radius: 0;
+    border-bottom: 2px solid #003E53;
 }
 
 header .signup-btn {
-  background-color: #00bbf9;
-  border: none;
-  color: white;
+    background-color: #00BBF9;
+    border: none;
+    color: white;    
 }
 
 header button:hover {
-  background-color: #003e53;
+    background-color: #003E53;
 }
 
 header input {
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 0 0.5rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: auto;
+    padding: .2rem 1.5rem;
+    width: 30vw;
+    margin: auto;
 }
 
 header input:focus {
-  outline: none;
+    outline: none;
 }
 
-.mob_search-bar {
-  display: flex;
-  align-items: center;
-  position: relative;
-  width: 50%;
+.desktop_nav .search-bar {
+    display: flex;
+    align-items: center;                
+    position: relative;
+    height: 2rem;
+    margin: 0 .25rem;    
 }
 
 .search-icon {
-  color: #4f4f4f;
-  font-size: 0.8rem;
-  position: absolute;
-  top: 55%;
-  transform: translateY(-50%);
-  left: 0.5rem;
+    cursor: auto;
+    color: #4F4F4F;
+    font-size: .8rem;
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+    left: .5rem;    
 }
 
 ::placeholder {
-  color: #4f4f4f;
-}
-
-.mob_search-bar input {
-  width: 100%;
-  height: 1.75rem;
-  padding: 0 1.75rem;
+    color: #4F4F4F;
 }
 
 .company-logo {
-  color: #00bbf9;
-  font-size: 1.75rem;
-  font-weight: 600;
-  letter-spacing: 0.2rem;
+    color: #00BBF9;    
+    font-size: 1.75rem;
+    font-weight: 600;
+    letter-spacing: .2rem;
 }
 
 .company-logo > a {
-  color: unset;
-  padding: 0;
-  text-decoration: none;
+    color: unset;
+    padding: 0;
+    text-decoration: none;
 }
 
 .company-logo > a:hover {
-  border-bottom: none;
-  text-decoration: none;
+    border-bottom: none;
+    text-decoration: none;
 }
 
-.desktop_nav {
-  display: none;
+.desktop_nav a{
+    display: none;
+    border-bottom: 2px solid transparent;
+}
+
+.desktop_nav > .btn-link:hover {
+    border-bottom: none;
 }
 
 .mobile_nav {
-  display: flex;
+    display: flex;
 }
 
 .nav_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 
-  background-color: #003e53;
-  border-radius: 10px;
-  height: 60vh;
-  padding: 2rem 1.5rem;
-  width: 80vw;
+    background-color: #003E53;
+    border-radius: 10px;
+    height: 60vh;
+    padding: 2rem 1.5rem;
+    width: 80vw;
 
-  position: absolute;
-  top: 4.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: 0.7s ease-out;
-  z-index: 3;
+    position: absolute;
+    top: 4.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: .7s ease-out;
+    z-index: 3;
 }
 
 .nav_card a,
 .nav_card button {
-  background-color: transparent;
-  color: white;
+    background-color: transparent;
+    color: white;
 }
 
 .nav_card.hide {
-  left: -100vw;
+    left: -100vw;
 }
 
 .menu_btn {
-  cursor: pointer;
-  font-size: 1.25rem;
+    cursor: pointer;
+    font-size: 1.25rem;
 }
 
 .menu_btn:hover {
-  color: #003e53;
+    color: #003E53;
 }
 
 /* ###---HEADER END---### */
@@ -286,75 +284,75 @@ footer a:hover {
   header {
     margin: 0 -4rem;
     padding: 1.5rem 4rem;
-  }
+}
 
-  header .menu_btn {
+header .menu_btn {
     display: none;
-  }
+}
 
-  header .company-logo {
+header .company-logo {
     font-size: 1.1rem;
     min-width: 6.5rem;
     margin: 0;
-  }
+}
 
-  header a,
-  header button {
+header a,
+header button {
     border-radius: 7px;
     cursor: pointer;
-    font-size: 0.8rem;
+    font-size: .8rem;
     font-weight: 500;
-    padding: 0 0.8rem;
-    margin: 0 0.25rem;
-  }
+    padding: 0 .8rem;
+    margin: 0 .25rem;        
+}
 
-  .mob_search-bar {
-    display: none;
-  }
-
-  header button {
-    border: 1px solid #00bbf9;
+header button {
+    border: 1px solid #00BBF9;
     background-color: transparent;
-    color: #00bbf9;
+    color: #00BBF9;
     min-width: 4.75rem;
-  }
+}
 
-  header button:hover {
-    border: 1px solid #003e53;
+header button:hover {
+    border: 1px solid #003E53;
     color: white;
-  }
+}   
 
-  .desktop_nav {
+.desktop_nav {
     display: flex;
     align-items: center;
     width: 87.5%;
-  }
+}
 
-  .search-icon {
-    cursor: pointer;
+.desktop_nav a{
+    display: flex;
+}
+
+.search-icon {        
     display: block;
-    font-size: 0.8rem;
+    font-size: .8rem;
 
     position: absolute;
-    left: 0.5rem;
+    left: .5rem;
     top: 50%;
     transform: translateY(-50%);
-  }
+}
 
-  .desktop_nav .search-bar {
+.desktop_nav .search-bar {
     display: flex;
-    align-items: center;
+    align-items: center;                
     position: relative;
     height: 2rem;
-    margin: 0 0.25rem;
+    margin: 0 .25rem;
     width: 45%;
-  }
+}
 
-  .desktop_nav input {
+.desktop_nav input {
+    cursor: auto;
     padding: 0 1.5rem;
-    width: 100%;
-    height: 100%;
-  }
+    width: 100%;                
+    height: 1.875rem;
+}
 
   .team_main {
     margin: 0 -4rem;
