--- a/frontend/terms/terms.css
+++ b/frontend/terms/terms.css
@@ -1,7 +1,168 @@
-.tp-header {
-    background-color: #fff;
-    padding: 1.2rem;
+/* ###---HEADER START---### */
+
+header {
+    align-items: center;
+    border-bottom: 1px solid gray;
+    padding: 1.25rem;
 }
+
+header,
+.desktop_nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header .company-logo {
+    font-size: 1.25rem;
+    letter-spacing: .05rem;    
+    text-align: left;
+}
+
+header a,
+header button {
+    border: none;
+    /* background-color: #557E8C; */
+    color: black;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;  
+    font-weight: 600;  
+
+    height: 2rem;
+    padding: 0 1rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+header a:hover {
+    border-radius: 0;
+    border-bottom: 2px solid #003E53;
+}
+
+header .signup-btn {
+    background-color: #00BBF9;
+    border: none;
+    color: white;    
+}
+
+header button:hover {
+    background-color: #003E53;
+}
+
+header input {
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: auto;
+    padding: .2rem 1.5rem;
+    width: 30vw;
+    margin: auto;
+}
+
+header input:focus {
+    outline: none;
+}
+
+.desktop_nav .search-bar {
+    display: flex;
+    align-items: center;                
+    position: relative;
+    height: 2rem;
+    margin: 0 .25rem;   
+    visibility: hidden; 
+}
+
+.search-icon {
+    cursor: auto;
+    color: #4F4F4F;
+    font-size: .8rem;
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+    left: .5rem;    
+}
+
+::placeholder {
+    color: #4F4F4F;
+}
+
+.company-logo {
+    color: #00BBF9;    
+    font-size: 1.75rem;
+    font-weight: 600;
+    letter-spacing: .2rem;
+}
+
+.company-logo > a {
+    color: unset;
+    padding: 0;
+    text-decoration: none;
+}
+
+.company-logo > a:hover {
+    border-bottom: none;
+    text-decoration: none;
+}
+
+.desktop_nav a{
+    display: none;
+    border-bottom: 2px solid transparent;
+}
+
+.desktop_nav > .btn-link:hover {
+    border-bottom: none;
+}
+
+.mobile_nav {
+    display: flex;
+}
+
+.nav_card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: #003E53;
+    border-radius: 10px;
+    height: 60vh;
+    padding: 2rem 1.5rem;
+    width: 80vw;
+
+    position: absolute;
+    top: 4.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: .7s ease-out;
+    z-index: 3;
+}
+
+.nav_card a,
+.nav_card button {
+    background-color: transparent;
+    color: white;
+}
+
+.nav_card.hide {
+    left: -100vw;
+}
+
+header .menu_btn {
+    display: none;
+}
+
+.menu_btn {
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+
+.menu_btn:hover {
+    color: #003E53;
+}
+
+/* ###---HEADER END---### */
+
 .tp-hr{
     border: 1px solid var(--secondary-color2);
     border-top: none;
@@ -87,6 +248,56 @@
     height: 80%;
     margin: auto;
 }
+
+/* ###---FOOTER START---### */
+
+footer {
+    background-color: #003E53;
+    margin: 0;
+    padding: 1.25rem 0;
+    text-align: center;
+}
+
+footer .company-logo {
+    color: white;
+}
+
+footer a:hover {
+    color: hsl(180, 66%, 49%);
+}
+
+.footer_nav {
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer_nav section {
+    display: flex;
+    flex-direction: column;
+    margin: .5rem 0;
+}
+
+.footer_nav h4 {
+    font-size: .85rem;
+    margin: .5rem 0;
+}
+
+.footer_nav a {
+    color: hsl(0, 0%, 75%);
+    font-size: .75rem;
+    margin: .25rem 0;
+    text-decoration: none;
+}
+
+.socials a {
+    color: white;
+    font-size: 1.35rem;
+    margin: 0 .25rem;
+}
+
+/* ###---FOOTER END---### */
+
 @media screen and (max-width: 1200px){
     .tp-main-left {
         width: 100%;
@@ -112,3 +323,77 @@
         width: 150px;
     }
 }
+
+/* ---Tablets--- */
+@media screen and (min-width: 820px) {
+
+    header {
+        margin: 0;        
+        padding: 1.5rem 4rem;
+    }
+    
+    header .company-logo {
+        font-size: 1.1rem;
+        min-width: 6.5rem;
+        margin: 0;
+    }
+
+    .desktop_nav a{
+        display: none;
+    }
+
+    .desktop_nav .search-bar {
+        display: none;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 1.5rem 4rem;
+        text-align: left;
+    }
+
+    .footer_nav {
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 1.25rem 0;
+        width: 100%;
+    }
+
+    .footer_nav h4 {
+        font-size: .85rem;
+        margin: 0;
+        margin-top: -0.35rem;
+        margin-bottom: .5rem;
+    }
+}
+
+/* ---Desktops--- */
+@media screen and (min-width: 1200px) {
+
+    header {
+        margin: 0;
+        padding: 2rem 6.5rem;
+    }
+
+    footer {        
+        margin: 0;
+        padding: 1.5rem 6.5rem;        
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    footer .company-logo {
+        margin: 0;
+    }
+
+    .footer_nav {
+        margin: 0;
+        width: 55%;
+    }
+}
+
+/* ###---RESPONSIVE STYLING END---### */
