--- a/backend/account/templates/reset_password.html
+++ b/backend/account/templates/reset_password.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 {% load crispy_forms_tags %}  
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
 
@@ -41,12 +41,48 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </center>
    
 </body>
+</html> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <link rel="stylesheet" href="{% static 'css/password-reset.css' %}">
+    <title>Reset Pass</title>
+  </head>
+  <body>
+    <header class="Rp-header">
+        <h1><a href="#">AUTH_WIKI</a></h1>
+    </header>
+    <div class="pass_reset_div">
+      <h1 style="color: #fffdfd;">Reset Password</h1>
+      <h4 style="color: #fffdfd;">
+        Please enter your registered email
+        <br />
+        and we will send instructions to
+        <br />
+        reset your password.
+      </h4>
+      <form method="POST">
+        {% csrf_token %}
+            {{ form }} 
+
+        <br />
+        <br />
+        <button type="submit" class="button button-secondary2 pr_button">
+          Send Instructions
+        </button>
+      </form>
+    </div>
+  </body>
 </html>
-
-
-
-
-
 
 
 
