--- a/backend/general/templates/index.html
+++ b/backend/general/templates/index.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<!-- <link rel="stylesheet" href="{% static 'css/all.css' %}">
-<link rel="stylesheet" href="{% static 'css/landing.css' %}"> -->
+
 
 {% block title %}AUTH-WIKI | Home {% endblock %}
 {% block content %}
@@ -175,7 +174,7 @@
   </body> -->
 
 
-<!-- <div class="homepage_wrapper" style="overflow:hidden;">
+<div class="homepage_wrapper" style="overflow:hidden;">
 
 <div class="first_wrapper">
 
@@ -334,11 +333,11 @@
 
 
 
-</div> -->
+</div>
 
 
 
-<main class="lpmiddle">
+<!-- <main class="lpmiddle">
   <div class="lpmiddle1">
     <div class="lpmiddle1a">
       <div class="lpmiddle1ai">
@@ -501,7 +500,7 @@
   <div class="lpmiddle6">
     <h1 id="lpheading4">I4GxZURI TEAM</h1>
   </div>
-</main>
+</main> -->
 
 
 
