--- a/backend/account/templates/password_reset_complete.html
+++ b/backend/account/templates/password_reset_complete.html
@@ -14,7 +14,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     <title>Password Changed Succesfully</title>
 </head>
 <body>
-<style>
+<!-- <style>
     input{
         border: grey solid 2px;
         border-radius: 10px;
@@ -22,7 +22,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         margin-bottom: 20px;
         outline: none;
     }
-</style>
+</style> -->
     <div class="header" style="background-color:#00BBF9 ; color: white; padding: 25px 0px; font-size: 25px; font-weight: bold;">
        <a href="{% url 'home' %}" style="color: white; text-decoration:none;" > <h3>AUTH WIKI</h3></a>
     </div>
