--- a/backend/account/templates/reset_password.html
+++ b/backend/account/templates/reset_password.html
@@ -58,9 +58,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     <title>Reset Pass</title>
   </head>
   <body>
-    <header class="Rp-header">
-        <h1><a href="#">AUTH_WIKI</a></h1>
-    </header>
+    <div class="header" style="background-color:#00BBF9 ; color: white; padding: 25px 0px; font-size: 25px; font-weight: bold;">
+      <a href="{% url 'home' %}" style="color: white; text-decoration:none;" > <h3>AUTH WIKI</h3></a>
+   </div>
     <div class="pass_reset_div">
       <h1 style="color: #fffdfd;">Reset Password</h1>
       <h4 style="color: #fffdfd;">
@@ -70,7 +70,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         <br />
         reset your password.
       </h4>
-      <form method="POST">
+      <form method="POST"  style="color: white;">
         {% csrf_token %}
             {{ form }} 
 
