--- a/backend/general/templates/index.html
+++ b/backend/general/templates/index.html
@@ -211,7 +211,7 @@
 
 
   <div class="third_wrapper_in">
-<a href="{% url 'documentation' %}"><button>View all Strategies</button></a>
+<a href="{% url 'libraries' %}"><button>View all Strategies</button></a>
   </div>
 
 </div>
