--- a/backend/static/css/library_detail.css
+++ b/backend/static/css/library_detail.css
@@ -1,8 +1,7 @@
 .library_detail_wrapper{
   background-color: #003E53;
   height: auto;
-margin-bottom: 200px;
-padding-bottom: 100px;
+padding-bottom: 150px;
 padding-top: 50px;
 }
 
@@ -33,12 +32,13 @@ width: 80%;
 justify-self: center;
 margin-top: 40px;
 overflow: auto;
-height: 400px;
+max-height: 60vh;
+}
+.code_sample::-webkit-scrollbar {
+display: none;
 }
 
-code{
-  border-radius: 10px;
-}
+
 
 .download_section{
   width: 80%;
