--- a/static/css/FAQS.css
+++ b/static/css/FAQS.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 300px;
   background-color: rgba(0, 62, 83, 1);
-  background-image: url(image/contact-us-banner.png);
+  background-image: url("/static/images/contact-us-banner.png");
   background-size: cover;
   z-index: 1;
   border-radius: 0 0 11% 11%;
