--- a/account/templates/success-page.html
+++ b/account/templates/success-page.html
@@ -18,11 +18,11 @@
     <body>
       <main class="sp-main">
         <div class="card">
-          <svg width="300" height="300" viewBox="0 0 300 300" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg viewBox="0 0 300 300" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M150 0C67.5 0 0 67.5 0 150C0 232.5 67.5 300 150 300C232.5 300 300 232.5 300 150C300 67.5 232.5 0 150 0ZM213 124.5L141 196.5C135 202.5 126 202.5 120 196.5L87 163.5C81 157.5 81 148.5 87 142.5C93 136.5 102 136.5 108 142.5L130.5 165L192 103.5C198 97.5 207 97.5 213 103.5C219 109.5 219 118.5 213 124.5Z" fill="#27AE60"/>
             </svg>
             
-            <h1 class="sp-success-text">Your password has been changed successfully!</h1> 
+            <h1 class="sp-success-text" style="text-align: center; font-size: 15px;">Your password has been changed successfully!</h1> 
             <p class="sp-go-home">Go back to <a id="" href="" style="color: #00BBF9; text-decoration: none"><strong>Home Page!</strong></a>
           </div>
       </main>
